--- a/src/view/ManageApplicationUI.fxml
+++ b/src/view/ManageApplicationUI.fxml
@@ -115,18 +115,9 @@
                               </Label>
                            </children>
                         </HBox>
-                        <ListView fx:id="note_list" prefHeight="248.0" prefWidth="166.0" />
+                        <ListView fx:id="notesListView" prefHeight="293.0" prefWidth="167.0" />
                      </children>
                   </VBox>
-                  <Button fx:id="btn_add_note" alignment="CENTER" layoutX="24.0" layoutY="325.0" mnemonicParsing="false" onAction="#addNewNote" prefHeight="27.0" prefWidth="141.0" styleClass="btn_add" stylesheets="@style.css" text="New Note" textAlignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/black_add.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
                </children>
             </Pane>
             <Pane prefHeight="386.0" prefWidth="433.0">
